--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
-<!--Birinci isim ikinci isim soyisim-->
 <h1>Erdinç E. Çırpıcı</h1>
 <h3>Hakkımda</h3>
-<!--Kişisel bilgiler-->
 <p>Merhaba ben Erdinç Esat Çırpıcı bilgisayar oyunu oynamayı,
     kitap okumayı ve gitar çalmayı severim. Pek bir şeyin hayranı
     değilim ama değişik yemekleri denemeyi severim. Programcılık
     alanında kendimi geliştirmeye çalışıyorum.
 </p>
+<h3>İlgi Alanlarım</h3>
+<ol>
+    <li>Film
+        <ul>
+            <li><a target="_blank" href="https://www.imdb.com/title/tt0120737/?pf_rd_m=A2FGELUUNOQJNL&pf_rd_p=1a264172-ae11-42e4-8ef7-7fed1973bb8f&pf_rd_r=0542M2FXTNJQ1SFMTCJ0&pf_rd_s=center-1&pf_rd_t=15506&pf_rd_i=top&ref_=chttp_tt_9">Lord of The Rings</a></li>
+            <li>Iron Man</li>
+            <li>Her</li>
+        </ul>
+    </li>
+    <li>Dizi
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt0455275/" target="_blank">Prison Break</a></li>
+            <li>What If...?</li>
+            <li>Shaman King</li>
+        </ul>
+    </li>
+    <li>Kitap
+        <ul>
+            <li><a target="_blank" href="https://www.goodreads.com/book/show/17157681-the-hobbit-part-one?ac=1&from_search=true&qid=ddAmcTaAwU&rank=2">Hobbit</a></li>
+            <li>Kumarbaz</li>
+            <li>Faust</li>
+        </ul>
+    </li>
+</ol>
 <h2>Sevdiğim Oyunlar</h2>
-<!--En sevdiğim oyun-->
 <h3>Halo</h3>
+<img src="img/halo.jpg" alt="Halo Resim" width="500" height="300">
 <p>Halo fantastik hikayesi olan bir fps oyunudur. Amacımız karşımıza çıkan
     uzaylı düşmanları (oyun içinde uzaylılara covenant deniyor) silah
     kullanarak öldürmek ve oyunun bize vermiş olduğu görevleri yerine
     getimek diyebiliriz.
-</p>
-<!--Oyunu benim için özel yapan şey-->
-<p>Bu oyunu benim için özel yapan şey ise atmosferi ve müzikleri... hiçbir oyun bu kadar iyi gaz
-    vermemiş veya arkadan bir anda girdiğinde tüylerimi diken diken etmemiştir.
 </p>
